<resources>
    <string name="app_name">AziretApp</string>
    <string name="hello_world">Hello World!</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_shop">Поиск магазина</string>
    <string name="hutork_900g">Пельмени ХУТОРОК 900г</string>
    <string name="choose_group_request">Выбор группового запроса</string>
    <string name="desc">Пельмени домашние классические Наши пельмени – это сочетание нежного теста и сочной мясной начинки. Приготовлены по традиционному рецепту, с использованием свежего фарша из говядины и курицы. Идеальны для быстрого ужина или семейного обеда. Просто добавьте любимые специи и наслаждайтесь вкусом домашней кухни!</string>
    <string name="weight_900g">- Вес: 900 г</string>
    <string name="experation_date">- Срок годности: 6 месяцев (при -18°C)</string>
    <string name="cooking_method">- Способ приготовления: варить 7-10 минут в подсоленной воде.</string>
    <string name="price">Цена: 480 сом.</string>
    <string name="in_stock">В наличии:</string>
    <string name="_537">537 штк</string>
    <string name="choose_shop">Выберите магазин</string>
    <string name="pay_with">Оплата с помощью:</string>
    <string name="cash">Наличными</string>
    <string name="debt">Долгом</string>
    <string name="request">Запросить</string>
    <string name="_50">50 штк</string>
    <string name="requested_products">Запрошенные товары</string>
    <string name="statistic">Статистика</string>
    <string name="calendar">Календарь</string>
    <string name="income">● Доход</string>
    <string name="expenditure">● Расход</string>
    <string name="debt_tv">● Долг</string>
    <string name="bonus">● Бонус</string>
    <string name="date">Дата 19.09.2024</string>
    <string name="all_count">Общее количество:</string>
    <string name="txt_income">Доход</string>
    <string name="_966_products">966 товаров</string>
    <string name="remains">Остаток</string>
    <string name="toybos">Пельмени Тойбос 244 штк</string>
    <string name="expenses">Расходы</string>
    <string name="_145_000_c">145.000 c</string>
    <string name="_245_000_c">245.000 c</string>
    <string name="debt_st">Долг</string>
    <string name="repaid_debt">Погашенный долг</string>
    <string name="_45_000_c">45.000 c</string>
    <string name="bonuses">Бонусы</string>
    <string name="total_balance">Общий баланс</string>
    <string name="_602_000_c">602.000 C</string>
    <string name="сalculation">Расчёт</string>
    <string name="for_myself">Для себя</string>
    <string name="you_choose_these_products">Вы выбрали эти товары</string>
    <string name="general_count">Общее количество:</string>
    <string name="_130_count">130 штк</string>
    <string name="general_price">Общая цена:</string>
    <string name="_54_300_som">54.300 сом</string>
    <string name="pay_with_">Оплата с помощью:</string>
</resources>